@@ -12484,10 +12484,14 @@ of the univariate polynomial \kbd{f} over the definition field of the
 \typ{FFELT} \kbd{a}. The coefficients of \kbd{f} must be of type \typ{INT},
 \typ{INTMOD} or \typ{FFELT} and compatible with \kbd{a}.
 
-\fun{GEN}{FFX_preimage}{GEN F, GEN x, GEN a} returns $P\%F$
+\fun{GEN}{FFX_preimagerel}{GEN F, GEN x, GEN a} returns $P\%F$
 where \kbd{P=x.pol} assuming $a$ and $x$ belongs to fields having the same
 characteristic, and that the coefficients of $F$ belong to the definition
 field of $a$.
+
+\fun{GEN}{FFX_preimage}{GEN F, GEN x, GEN a} as \kbd{FFX\_preimagerel}
+but return \kbd{NULL} if the remainder is of degree greater or equal to $1$,
+the constant coefficient otherwise.
 
 \subsec{FFM}
 
